src/snapshots/purs_oxide__renamed_module__tests__export_blanket_data_decl.snap
---
source: src/renamed_module.rs
expression: "export_decls(indoc!(\"\n    module Test where\n    data Foo\n    \"), vec![])"
---
(
    [
        DeclId {
            namespace: Type,
            module: ModuleId {
                name: "Test",
            },
            name: Symbol {
                text: "Foo",
            },
        },
    ],
    [],
)
