src/snapshots/purs_oxide__renamed_module__tests__export_class_decl.snap
---
source: src/renamed_module.rs
expression: "export_decls(indoc!(\"\n    module Test where\n\n    class Foo a where\n      foo :: a\n    \"))"
---
(
    [
        DeclId {
            namespace: Class,
            module: ModuleId {
                [salsa id]: 0,
                name: "Test",
            },
            name: Symbol {
                [salsa id]: 0,
                text: "Foo",
            },
        },
    ],
    [],
)
