src/snapshots/purs_oxide__renamed_module__tests__export_data_with_constructors_decl.snap
---
source: src/renamed_module.rs
expression: "export_decls(indoc!(\"\n        module Test (Foo(..)) where\n        \n        data Foo = Bar | FooBar\n        \"))"
---
(
    [
        DeclId {
            namespace: Type,
            module: ModuleId {
                [salsa id]: 0,
                name: "Test",
            },
            name: Symbol {
                [salsa id]: 0,
                text: "Foo",
            },
        },
    ],
    [],
)
