src/snapshots/purs_oxide__renamed_module__tests__reexport_all.snap
---
source: src/renamed_module.rs
expression: "export_decls(indoc!(\"\n    module Test (module X) where\n    import Lib2 as X\n    \"),\n    vec![LIB2])"
---
(
    [
        DeclId {
            namespace: Value,
            module: ModuleId {
                name: "Lib2",
            },
            name: Symbol {
                text: "x",
            },
        },
        DeclId {
            namespace: Value,
            module: ModuleId {
                name: "Lib2",
            },
            name: Symbol {
                text: "y",
            },
        },
    ],
    [],
)
