src/snapshots/purs_oxide__renamed_module__tests__reexport_qualified_itself.snap
---
source: src/renamed_module.rs
expression: "export_decls(indoc!(\"\n            module Test (module L, module Test) where\n            \n            import Lib as L\n            \n            x = 1\n            \"),\n    vec![LIB1])"
---
(
    [
        DeclId {
            namespace: Type,
            module: ModuleId {
                name: "Lib",
            },
            name: Symbol {
                text: "Foo",
            },
        },
    ],
    [],
)
